--- a/findCourses.html
+++ b/findCourses.html
@@ -133,7 +133,11 @@
     </div>
 
     <div class="col MDC-padding-0 right">
-      sort
+      <div class="MDC-page-title-container">
+        <div class="MDC-card MDC-card-container">
+          <font class="MDC-category-menu-font MDC-color-grey-dark-2">Sort</font>
+        </div>
+      </div>
     </div>
 
   </div>
@@ -145,6 +149,34 @@
       <!-- CATEGORY LEFT -->
       <div class="col MDC-padding-0">
           <div class="MDC-card MDC-category-card-container MDC-absolute">
+
+            <ul id='category_menu' class="">
+              <li class="MDC-category-menu-font MDC-menu-ul-position">
+                <a class="MDC-color-blue" href="#!">Category</a>
+              </li>
+              <li class="divider"></li>
+              <li class="MDC-category-menu-font MDC-menu-li-position">
+                <a class="MDC-color-grey-dark-2" href="#!">Programming languages
+                  <i class="material-icons MDC-icon-small MDC-color-grey-dark-2
+                            MDC-category-expand-icon-position MDC-absolute">expand_more</i>
+                </a>
+              </li>
+              <li class="MDC-category-menu-font MDC-menu-li-position">
+                <a class="MDC-color-grey-dark-2" href="#!">Ethics
+                  <i class="material-icons MDC-icon-small MDC-color-grey-dark-2
+                            MDC-category-expand-icon-position MDC-absolute">expand_more</i>
+                </a>
+              </li>
+              <li class="MDC-category-menu-font MDC-menu-li-position">
+                <a class="MDC-color-grey-dark-2" href="#!">Mathematics</a>
+              </li>
+              <li class="MDC-category-menu-font MDC-menu-li-position">
+                <a class="MDC-color-grey-dark-2" href="#!">Cryptography</a>
+              </li>
+              <li class="MDC-category-menu-font MDC-menu-li-position">
+                <a class="MDC-color-grey-dark-2" href="#!">Insurance</a>
+              </li>
+            </ul>
 
           </div>
       </div>
