--- a/profile.html
+++ b/profile.html
@@ -59,12 +59,11 @@
                <img src="images/temp/man-profile-circle-3.png" class="MDC-avatar-circle-small mdc-nav-avatar-position"/>
             </a>
             <!-- Dropdown Structure -->
-            <ul id='account-dropdown' class='dropdown-content MDC-nav-account-dropdown-position
-                                             mdc-dropdown-style'>
-              <li><a id="profile" class="modal-trigger" href="profile">Profile</a></li>
-              <li><a href="#!">Report a Problem</a></li>
+            <ul id='account-dropdown' class='dropdown-content MDC-nav-account-dropdown-position'>
+              <li><a id="profile" class="modal-trigger MDC-color-grey-dark-2 MDC-font-15" href="profile">Profile</a></li>
+              <li><a class="MDC-color-grey-dark-2 MDC-font-15" href="#!">Report a Problem</a></li>
               <li class="divider"></li>
-              <li><a href="logout">Logout</a></li>
+              <li><a class="MDC-color-grey-dark-2 MDC-font-15" href="logout">Logout</a></li>
             </ul>
           </div>
         </div>
@@ -92,9 +91,9 @@
                         menu
                       </i>
                     </a>
-                    <li class="MDC-navbar-menu"><a class="active MDC-navbar-active" href="#!">My Courses</a></li>
+                    <li class="MDC-navbar-menu"><a href="#!">My Courses</a></li>
                     <li class="MDC-navbar-menu"><a href="#!">Manage Team</a></li>
-                    <li class="MDC-navbar-menu"><a href="#!">Find Courses</a></li>
+                    <li class="MDC-navbar-menu"><a class="active MDC-navbar-active" href="#!">Find Courses</a></li>
                     <li class="MDC-navbar-menu"><a href="#!">News</a></li>
                   </ul>
                   <div id="mySidenav" class="MDC-sidenav">
@@ -141,7 +140,7 @@
              class="MDC-image-circle-large MDC-shadow-default"/>
         <!-- AVATAR INFORMATION -->
         <div class="MDC-profile-info-container">
-          <div class="MDC-h1-style MDC-color-grey-dark center">
+          <div class="MDC-h1-style MDC-color-grey-dark-2 center">
             Renan Chagas
           </div>
           <div class="MDC-h2-style MDC-color-grey center">
