--- a/findCourses.html
+++ b/findCourses.html
@@ -91,7 +91,7 @@
                         menu
                       </i>
                     </a>
-                    <li class="MDC-navbar-menu"><a href="#!">My Courses</a></li>
+                    <li class="MDC-navbar-menu"><a href="#!">My Dashboard</a></li>
                     <li class="MDC-navbar-menu"><a href="#!">Manage Team</a></li>
                     <li class="MDC-navbar-menu"><a class="active MDC-navbar-active" href="#!">Find Courses</a></li>
                     <li class="MDC-navbar-menu"><a href="#!">News</a></li>
