--- a/news-create-2.html
+++ b/news-create-2.html
@@ -17,8 +17,16 @@
 
   <script type="text/javascript">
     $(document).ready(function() {
-     $('select').material_select();
-     $('selectCagory').material_select();
+      $('select').material_select();
+      $('selectCagory').material_select();
+
+      $('.chips').material_chip();
+
+
+      $('.chips-placeholder').material_chip({
+        placeholder: 'Enter a tag',
+        secondaryPlaceholder: 'Enter a tag',
+      });
 
     });
   </script>
@@ -183,9 +191,7 @@
             <div class="row MDC-margin-bottom2 MDC-card-news-container-leftRight">
               <!-- Tags -->
               <div class="row left MDC-category-form-border-size">
-                <div class="input-field">
-                  <input id="input_text" placeholder="Technology; Ethics;" type="text" class="MDC-border-grey-light ">
-                  <label for="input_text">Tags</label>
+                <div class="chips chips-placeholder MDC-border-grey-light" data-index="0" data-initialized="true">
                 </div>
               </div>
 
