--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Course Management</title>
+  <title>Project Management</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -58,6 +58,18 @@
         </div>
       </form>
       <!-- Form - END -->
+      <div class="right">
+        <div class="row MDC-margin-top20">
+          <div class="col s12">
+            <div class="grey-text MDC-login-form-size center-align">
+              Don't have an account yet ? <a href="signup.html">Click here</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
 
     </div>
   </div>
